--- a/코플릿/section4_알고리즘/04_[DP] 금고를 털어라(동전 교환).md
+++ b/코플릿/section4_알고리즘/04_[DP] 금고를 털어라(동전 교환).md
@@ -10,7 +10,7 @@
 - $20 두 장, $10 한 장을 훔친다
 - $20 한 장, $10 세 장을 훔친다
 - $10 다섯 장을 훔친다
-  
+
 훔치고 싶은 target 금액과 금고에 있는 돈의 종류 type 을 입력받아, 조지가 target 을 훔칠 수 있는 방법의 수를 리턴하세요.
 
 ## 입력
@@ -40,7 +40,9 @@ console.log(output); // 10
 
 let output = ocean(30, [5, 6, 7]);
 console.log(output); // 4
-Hint!
+```
+
+## Hint!
+
 해당 문제는 동전 교환 알고리즘 (Coin Change)을 활용하여 풀 수 있습니다.
 검색해 보시고, 연구해 보세요!
-```
